Fix alignment for ul and ol - including fix vor VisualEditor
[3.1]

Please cherry-pick to master

--- a/resources/stylesheets/content/content.less
+++ b/resources/stylesheets/content/content.less
@@ -103,30 +103,37 @@
 	.floatleft {
 		margin-right: 1.5em;
 	}
-	ul {
-		margin: 0 0 0 1.6em;
-		padding: 0;
-	}
-	ul > li {
-		margin-left: 0em;
-		font-size: 0.9375rem;
-		font-weight: @font-weight-regular;
-		margin-top: 0.1875rem;
-		margin-bottom: 0.1875rem;
-	}
-	li > ul > li {
-		margin-left: 0em;
-	}
+	ul,
 	ol {
 		margin: 0 0 0 1.6em;
 		padding: 0;
 	}
+	ul > li,
 	ol > li {
 		margin-left: 0em;
 		font-size: 0.9375rem;
 		font-weight: @font-weight-regular;
 		margin-top: 0.1875rem;
 		margin-bottom: 0.1875rem;
+	}
+
+	/* Fix for VisualEditor */
+	/* list-style-position inside will break VisualEditor view */
+	ul > li:not( .ve-ce-branchNode ),
+	ol > li:not( .ve-ce-branchNode ) {
+		list-style-position: inside;
+	}
+	ul.ve-ce-branchNode,
+	ol.ve-ce-branchNode {
+		margin: 0;
+		padding-left: 1.6em;
+	}
+	/* End fix for VisualEditor */
+
+	.mw-parser-output > ul,
+	.mw-parser-output > ol {
+		margin-left: 0em;
+		display: inline-block;
 	}
 	#contentSub .subpages {
 		display: none;
